--- a/ucf-apps/archives/src/routes/product/components/AltWidthLayout/index.less
+++ b/ucf-apps/archives/src/routes/product/components/AltWidthLayout/index.less
@@ -12,11 +12,17 @@
 }
 
 .resize {
-  width: 1px;
+  width: 5px;
   height: 100%;
   cursor: w-resize;
   float: left;
-  background: #c1c7d0;
+  background: #fff;
+  border-left: 1px solid #c1c7d0;
+}
+
+.resize:hover {
+  border-left: 3px solid #c1c7d0;
+
 }
 
 .alt-width-right {
