--- a/ucf-apps/archives/src/routes/product/components/IndexView/index.less
+++ b/ucf-apps/archives/src/routes/product/components/IndexView/index.less
@@ -1,6 +1,6 @@
 .search-input {
-  margin: 10px 10px 0px 10px;
-  width: calc(100% - 20px) !important;
+  margin: 10px 20px 0px 10px;
+  width: calc(100% - 32px) !important;
 }
 
 .auto-form {
@@ -9,19 +9,38 @@
 
 .auto-form-item {
   float: left;
-  width: 340px;
+  width: 320px;
   padding: 0 !important;
   .auto-label {
     float: left;
     display: block;
     line-height: 32px;
+    padding-right: 5px !important;
     width: 110px;
   }
+  .u-label:after {
+    display: inline-block;
+    margin-right: 4px;
+    content: "  ";
+    line-height: 1;
+    font-size: 14px;
+    font-family: monospace;
+    width: 5px;
+  }
+
+  .red-star:after {
+    content: "*";
+    color: #f5222d;
+  }
+
   .auto-content {
     float: left;
     display: block;
     width: 200px;
 
+    .auto-input {
+      width: 100%;
+    }
     .u-select {
       width: 100%;
     }
