--- a/ucf-apps/archives/src/routes/product/components/IndexView/index.less
+++ b/ucf-apps/archives/src/routes/product/components/IndexView/index.less
@@ -4,7 +4,10 @@
 }
 
 .tree-search {
-
+  padding-right: 22px;
+  padding-left: 4px;
+  margin-bottom: 10px;
+  margin-top: 8px;
 }
 
 .action-content {
